# python-internal

./: Makefile  README.md  pyproject.toml
PROBATIONS/booking_system/: airplane_ticket.py  booking_system.py  cinema_ticket.py  test_solution.py  ticket.py  train_ticket.py
PROBATIONS/classes_validation/: errors.py  repository.py  test_solution.py  validate.py
PROBATIONS/logger/: console_logger.py  file_logger.py  logger.py  test_solution.py
abstract/: HTMLButtonElement.py  HTMLElement.py  HTMLImgElement.py
abstract/tests/: test_HTMLButtonElement.py  trst_HTMLImgElement.py
access_modifiers/: HTMLElement.py  test_solution.py
composition/: Application.py  Sanitizer.py  SanitizerStripTagsDecorator.py  test_Application.py
exceptions/: File.py  utils.py
exceptions/errors/: FileError.py
exceptions/tests/: test_errors.py  test_file.py  test_utils.py
late_static_binding/: HTMLDivElement.py  HTMLElement.py
late_static_binding/tests/: test_solution.py
python_inheritance/: Makefile
template_method/: HTMLDivElement.py  HTMLPairElement.py  test_solution.py
